force-app/main/default/objects/Master_Resume_Config__c/Master_Resume_Config__c.object-meta.xml
<CustomObject>
    <description>Stores your master resume content for tailored resume generation</description>
    <label>Master Resume Config</label>
    <nameField>
        <displayFormat>MR-{0000}</displayFormat>
        <label>Master Resume Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Resume Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>