force-app/main/default/objects/Master_Resume_Config__c/fields/Cover_Letter_Template__c.field-meta.xml
<CustomField>
    <fullName>Cover_Letter_Template__c</fullName>
    <description>Your preferred cover letter style/template for Claude to follow</description>
    <label>Cover Letter Template</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>