force-app/main/default/objects/Master_Resume_Config__c/fields/Key_Achievements__c.field-meta.xml
<CustomField>
    <fullName>Key_Achievements__c</fullName>
    <description>Your most important quantified achievements (STAR format examples)</description>
    <label>Key Achievements</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>