force-app/main/default/objects/Master_Resume_Config__c/fields/Resume_Content__c.field-meta.xml
<CustomField>
    <fullName>Resume_Content__c</fullName>
    <description>Your complete master resume content with all experience, skills, and achievements</description>
    <label>Resume Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>