force-app/main/default/objects/Master_Resume_Config__c/fields/Technical_Skills__c.field-meta.xml
<CustomField>
    <fullName>Technical_Skills__c</fullName>
    <description>Salesforce: Administration, Service Cloud, Lightning Experience, Multi-Cloud, User Profiles &amp; Permissions, Security, Flow Builder, Process Automation, SOQL/SOSL, Data Loader, Custom Objects, Validation Rules, Agentforce Builder, Case Management, Sandbox Management, Change Sets
Data &amp; Analytics: SQL, Tableau CRM, Advanced Excel (VBA, Pivot Tables), Data Visualization, ETL, Data Migration, Data Quality Management, Performance Analytics
Tools &amp; Platforms: Jira, Agile Methodology, API Integration, MuleSoft, HTML, CSS, Database Management, System Troubleshooting, Reporting &amp; Dashboards</description>
    <label>Technical Skills</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>